# ansible-security-scanner

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .security-scanner-allowlist.yml  .yamllint.yaml  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  main.py  pyproject.toml  task.py
.github/: binbuild-pyinstaller.txt  binbuild-uv.txt  buildfrontend.in  buildfrontend.txt  constraints.in  constraints.txt  dependabot.yml  secret_scanning.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  constraints.in  constraints.txt  lint.yml  pip-audit.yml  refresh-lockfile.yml  scanner-ci.yml  scanner-docs.yml  scanner-release.yml  scorecard.yml
.hugo/: config.toml
.hugo/layouts/partials/: custom-header.html  heading-pre.html  heading.html  logo.html
.hugo/scripts/: build_docs.py  regen_dashboard_counts.py  regen_pattern_blank_lines.py  regen_readme_counts.py
.hugo/static/: llms.txt  robots.txt
.hugo/static/apt/: index.html
.hugo/static/css/: custom.css
.hugo/static/js/: custom.js
docs/: about.md  allowlist.md  api.md  ci-cd.md  cli.md  custom-patterns.md  environment.md  limitations.md  mr-pr-comments.md  output-formats.md  releasing.md  scoring.md  testing.md
packaging/: build-apt-repo.sh  nfpm.yaml
snap/: snapcraft.yaml
src/ansible_security_scanner/: __init__.py  __main__.py  _ast_helpers.py  _secrets.py  argument_specs.py  cli.py  comment.py  dependency_collector.py  file_scanner.py  fix_proposer.py  link_resolver.py  models.py  path_scopes.py  patterns_cli.py  patterns_manager.py  playbook_classifier.py  project_classification.py  scanner.py  score_calculator.py  suppressions.py  synthetic_rule_frameworks.py  taint_tracker.py  utils.py  variable_extractor.py
src/ansible_security_scanner/comment/: __init__.py  context.py  fingerprint.py  inline.py  posting.py  rendering.py
src/ansible_security_scanner/formatters/: __init__.py  _policy.py  base.py  csv.py  cyclonedx.py  gitlab_sast.py  html.py  json.py  junit.py  markdown.py  sarif.py  xml.py  yaml.py
src/ansible_security_scanner/frameworks/: atlas.yml  cis_controls.yml  cve.yml  cwe.yml  hipaa.yml  mitre_attack.yml  nist_800_53.yml  owasp_appsec.yml  owasp_asvs.yml  owasp_llm.yml  pci_dss.yml  soc2.yml  stig.yml
src/ansible_security_scanner/patterns/: __init__.py  ai_ml_security.yml  ansible_hygiene.yml  ansible_specific.yml  anti_forensics.yml  binary_planting.yml  command_injection.yml  dangerous_modules.yml  data_destruction.yml  data_exfiltration.yml  environment_hijacking.yml  external_urls.yml  hardcoded_credentials.yml  insecure_communication.yml  jinja_lookup_rce.yml  k8s_insecure_spec.yml  lateral_movement.yml  malicious_activity.yml  obfuscation_evasion.yml  offensive_tools.yml  operational_security.yml  privilege_escalation.yml  reverse_shells.yml  supply_chain.yml  system_compromise.yml  template_injection.yml  tunneling.yml  unauthorized_cloud_access.yml  unsafe_permissions.yml  variable_injection.yml  webhook_exposure.yml  webshell_deployment.yml
src/ansible_security_scanner/patterns/remediations/: README.md  ai_ml_security.yml  ansible_hygiene.yml  ansible_specific.yml  anti_forensics.yml  binary_planting.yml  command_injection.yml  dangerous_modules.yml  data_exfiltration.yml  external_urls.yml  hardcoded_credentials.yml  insecure_communication.yml  jinja_lookup_rce.yml  k8s_insecure_spec.yml  lateral_movement.yml  malicious_activity.yml  obfuscation_evasion.yml  operational_security.yml  privilege_escalation.yml  supply_chain.yml  system_compromise.yml  template_injection.yml  unauthorized_cloud_access.yml  (+1 more)
src/ansible_security_scanner/remediations/: __init__.py  _category_map.py  _companion_index.py  _pattern_index.py  ai_ml_security.py  ansible_hygiene.py  ansible_specific.py  anti_forensics.py  base.py  become_delegate_misuse.py  callback_plugin_risk.py  command_injection.py  credentials.py  curl.py  dangerous_modules.py  data_destruction.py  data_exfiltration.py  environment_hijacking.py  external_urls.py  galaxy_supply_chain.py  insecure_communication.py  k8s_insecure_spec.py  lateral_movement.py  malicious_activity.py  malicious_activity_exploits.py  offensive_tools.py  operational_security.py  operational_security_procedural.py  permissions.py  privilege_escalation.py  remediation_generator.py  rule_id_categories.yml  ssh_trust_bypass.py  supply_chain.py  system_compromise.py  taint_flow.py  template_injection.py  tunneling.py  unauthorized_cloud_access.py  unauthorized_cloud_procedural.py  (+3 more)
tests/: conftest.py  test_build_docs.py  test_cli_env_overrides.py  test_comment.py  test_comment_inline.py  test_cross_file_dedup.py  test_finding_quality.py  test_fix_proposer.py  test_formatters.py  test_framework_catalog.py  test_fuzz.py  test_integration.py  test_playbook_annotations.py  test_policy_transparency.py  test_release_contract.py  test_remediations.py  test_rule_examples.py  test_rule_selection.py
tests/data/: corpus_active_rules.json
tests/playbooks/: bad_example.yml  clean_example.yml
tests/playbooks/annotations/: commented_out_lines.yml  credential_dict_heuristic.yml  cross_file_taint_local_shell.yml  fork_triggerable_ai_nonreachable.yml  fork_triggerable_ai_reachable.yml  jinja2_render_sensitive_var.yml  jinja_in_set_fact_unsafe.yml  set_fact_injection.yml  vars_prompt_taint.yml
tests/playbooks/multi_example_bad/: site.yml
tests/playbooks/multi_example_clean/: site.yml
tests/playbooks/path_scoped/: requirements.yml
tests/playbooks/vars/: vault.yml
(+10 files in other folders)
